force-app/main/default/objects/Simple_Sales_Order_Item__c/Simple_Sales_Order_Item__c.object-meta.xml
<CustomObject>
    <label>Simple Sales Order Item</label>
    <nameField>
        <displayFormat>Order Item-{0000}</displayFormat>
        <label>Simple Sales Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Simple Sales Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>