force-app/main/default/objects/Simple_Sales_Order_Item__c/fields/Item_SKU__c.field-meta.xml
<CustomField>
    <fullName>Item_SKU__c</fullName>
    <label>Item SKU</label>
    <length>32</length>
    <type>Text</type>
</CustomField>