force-app/main/default/objects/Simple_Sales_Order_Item__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>