force-app/main/default/objects/Simple_Sales_Order_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>